Allow changing height to prevent stretched image
* If it's 100%, it doesn't work with other settings.
* Keep it at 100% for mobile.
* Add overflow: hidden to background to avoid spilling out.
* This needs cleaning up later.

--- a/assets/src/scss/layout/_page-header.scss
+++ b/assets/src/scss/layout/_page-header.scss
@@ -79,6 +79,7 @@
 }
 
 .page-header-background {
+  overflow: hidden;
   position: absolute;
   z-index: 0;
   top: 0;
@@ -105,8 +106,13 @@
   }
 
   img {
+    _-- {
+      height: 100%;
+      @include mobile-only {
+        height: 100%;
+      }
+    }
     width: 100%;
-    height: 100%;
   }
 }
 
